--- a/styles/signup.css
+++ b/styles/signup.css
@@ -89,3 +89,13 @@ label {
   margin-bottom: 3%;
   font-size: 14px;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
