--- a/Signin.css
+++ b/Signin.css
@@ -5,7 +5,7 @@ body{
     width:100%;
     height:100%;
     margin:0;
-    
+
 
 }
 
@@ -15,7 +15,7 @@ body{
     width:100%;
     height:100%;
     background-image: linear-gradient(to right, #00FFE6 0%, #00FFE6 50%, #6F29FF 100%);
-        
+
 }
 
 .formcontainer{
@@ -24,16 +24,16 @@ body{
     top:50%;
     left:50%;
     transform:translate(-50%,-50%);
-    
-    width:930px;
+
+    width:75%;
     height:60%;
     min-height:510px;
     background-color:#eee;
     box-shadow:7px 4px 19px -2px rgba(0,0,0,0.75);
-    
+
     display:flex;
     flex-wrap:nowrap;
-      
+
 }
 
 .slidesection{
@@ -51,20 +51,25 @@ body{
     position:relative;
     width:50%;
     height:100%;
-    Padding:10px 70px;
-    
+    Padding:2% 7%;
+
     font-family:Montserrat;
 }
 
 .formsection > * {
-    margin: 10px 0;
+    margin: 1% 0;
 }
 
 .formsection h1{
     font-family:Montserrat;
-    margin-bottom:30px;
-    margin-top:30px;
+    margin-bottom:5vh;
+    margin-top:5vh;
     text-align:center;
+}
+
+.formsection h3{
+  margin-top: 6vh;
+  text-align:center;
 }
 
 .warning{
@@ -74,15 +79,15 @@ body{
 
 .inputRow{
     width:100%;
-    height:40px;
+    height:6vh;
     background-color:white;
     display:flex;
     justify-content:space-between;
     align-items:stretch;
     border-radius:100px;
     overflow:hidden;
-    margin-top:20px;
-    
+    margin-top:5%;
+
 }
 
 .inputRow .inputicon{
@@ -90,49 +95,52 @@ body{
     display:flex;
     justify-content:center;
     align-items:center;
-    font-size:20px;
+    font-size:120%;
 }
 
 .inputRow input{
     width:85%;
-    padding:2px 6px;
+    padding:2%;
     border:none;
     outline:none;
     border-left:1px solid rgba(34,34,34,0.116);
-    font-size:17px;
+    font-size:105%;
 }
 
 .Row{
     display:flex;
     justify-content:Space-between;
-    margin-bottom:50px;
+    margin-bottom:7vh;
+    margin-top: 3vh;
 }
 
 .btnRow{
     display:flex;
     justify-content:space-around;
+    margin-bottom: 2vh;
 }
 
 .submit{
     border-radius:100px;
     border:none;
     box-shadow:2px 2px 5px -4px rgba(0,0,0,0.75);
-    padding:5px 8px;
-    
+    padding:1% 2%;
+    margin-top: 8%;
+
     min-width:inherit;
     min-height:inherit;
     width:100%;
-    height:40px;
+    height:6vh;
     display:flex;
     justify-content:center;
     align-items:center;
-    
+
     text-decoration:none;
     color:white;
-    font-size:18px;
+    font-size:3vh;
     font-family:Montserrat;
     cursor:pointer;
-    
+
     transition: all ease-in-out 250ms;
 }
 
@@ -140,3 +148,55 @@ body{
     background-image: linear-gradient(to right,#E063FF 0%,#E063FF 50%, #6F29FF 100%);
 }
 
+
+@media (max-width: 812px) {
+  .formcontainer{
+    min-height: 350px;
+    display:flex;
+    flex-wrap:nowrap;
+    flex-direction: column;
+  }
+
+  .slidesection{
+    width:100%;
+    height:5%;
+  }
+
+  .slidesection img{
+      width:100%;
+      height:100%;
+      object-fit: cover;
+  }
+
+  .formsection{
+      width:80%;
+      height:95%;
+      padding: 0 10%;
+  }
+
+  .formsection h3{
+    margin-top: 6vh;
+    text-align:center;
+    font-size: 100%;
+  }
+
+  .submit {
+    height: 7vh;
+    font-size:4vh;
+  }
+}
+
+@media (max-width: 414px) {
+  .formsection h3{
+    margin-top: 3vh;
+  }
+
+  .inputRow{
+      height:5vh;
+  }
+
+  .formsection h1{
+      margin-bottom:3vh;
+      margin-top:3vh;
+  }
+}
