--- a/Signin.css
+++ b/Signin.css
@@ -199,4 +199,16 @@ body{
       margin-bottom:3vh;
       margin-top:3vh;
   }
+
+  .Row{
+    justify-content: center;
+    flex-wrap: wrap;
+    text-align: center;
+    margin-bottom: 4vh;
+    margin-top: 2vh;
+  }
+
+  .col{
+    margin-bottom: 1vh;
+  }
 }
